# Lindenmayer

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
app/: CMakeLists.txt  DeviceSchemeWidget.cpp  DeviceSchemeWidget.hpp  DockWidgetManager.cpp  DockWidgetManager.hpp  GraphicsSceneTurtle2D.cpp  GraphicsSceneTurtle2D.hpp  Lindenmayer.qrc  MainWindow.cpp  MainWindow.hpp  MessageListView.cpp  MessageListView.hpp  Midi-boy.qrc  MidiInputWidget.cpp  MidiInputWidget.hpp  MidiMessageFilterFactory.cpp  MidiMessageFilterFactory.hpp  MidiMessageListView.cpp  MidiMessageListView.hpp  MidiMonitor.qrc  MidiWidget.cpp  MidiWidget.hpp  main.cpp
app/Languages/: CMakeLists.txt  MidiBoy_en.ts  MidiBoy_fr.ts
app/Logger/: LogManager.cpp  LogManager.hpp
app/Plugins/: Plugins.qrc
app/Plugins/Commons/: TextDatabase.cpp  TextDatabase.hpp
app/Resources/: About.html  About.txt  Credits.txt  MIDI_Manufacturers.csv  README.md
app/System/: TranslatorManager.cpp  TranslatorManager.hpp
app/Translators/: TranslatorManager.cpp  TranslatorManager.hpp
app/Ui/: AboutMidiMonitorDialog.cpp  AboutMidiMonitorDialog.hpp  AboutMidiMonitorDialog.ui  CommonUi.cpp  CommonUi.hpp  DockWidgetManager.cpp  DockWidgetManager.hpp  Format.cpp  Format.hpp  MainWindow.cpp  MainWindow.hpp  MidiMessageListView.cpp  MidiMessageListView.hpp  SettingsUtils.hpp  ToolBarManager.cpp  ToolBarManager.hpp
app/Ui/Delegates/: MidiDelegates.cpp  MidiDelegates.hpp
app/Ui/Views/: MidiConsoleView.cpp  MidiConsoleView.hpp  MidiMessageListView.cpp  MidiMessageListView.hpp  MidiPortTreeView.cpp  MidiPortTreeView.hpp
app/Ui/Widgets/: AboutMidiMonitorDialog.cpp  DeviceSchemeWidget.cpp  DeviceSchemeWidget.hpp  MidiConsoleArea.cpp  MidiConsoleArea.hpp  MidiKeyboardWidget.cpp  MidiKeyboardWidget.hpp  MidiMatrixWidget.cpp  MidiMessageListView.cpp  MidiNoteTriggerWidget.cpp  MidiNoteTriggerWidget.hpp
core/: CMakeLists.txt  LCodeASTBuilder.cpp  LCodeASTBuilder.hpp
core/include/: ATurtle2D.hpp  ActionFactory.hpp  ActionTable.hpp  Format.hpp  Module.hpp  ModuleAction.hpp  ModuleTable.hpp  Optional.hpp  Program.hpp  QAbstractDeviceScheme.hpp  QAbstractMidiIn.hpp  QAbstractMidiMessageFilter.hpp  QAbstractMidiOut.hpp  QAbstractMidiScheme.hpp  QAbstractMidiTranslator.hpp  QDefaultDeviceScheme.hpp  QDefaultMidiScheme.hpp  QDefaultMidiTranslator.hpp  QDeviceSchemeFactory.hpp  QMidiChecksums.cpp  QMidiChecksums.hpp  QMidiDeviceModel.hpp  QMidiIn.hpp  QMidiInBase.hpp  QMidiInListModel.hpp  QMidiManager.cpp  QMidiManager.hpp  QMidiManufacturerModel.hpp  QMidiMessage.hpp  QMidiMessageBuilder.hpp  QMidiMessageFilterFactory.hpp  QMidiMessageFilterModel.hpp  QMidiMessageMatrix.hpp  QMidiMessageMatrixModel.hpp  QMidiMessageModel.hpp  QMidiNoteModel.hpp  QMidiOut.hpp  QMidiOutBase.hpp  QMidiPortModel.hpp  QMidiTranslatorFactory.hpp  (+5 more)
core/include/LCode/: AbstractSyntaxTreeAlgorithms.hpp  AbstractSyntaxTreeBuilder.cpp  AbstractSyntaxTreeBuilder.hpp  AbstractSyntaxTreeNode.hpp  CompilationContext.hpp  Context.hpp  GatherConstantExpressionPass.hpp  LCodeProgram.cpp  LCodeProgram.hpp  LCodeScopeTree.hpp  LCodeScopeTreeBuilder.hpp  ParseError.hpp  ParseErrorListener.cpp  ParseErrorListener.hpp  ParsingContext.hpp  ScopeTree.hpp  ScopeTreeAlgorithms.hpp  ScopeTreeBuilder.hpp  StorageType.hpp  StringFormat.hpp  SymbolDefinitionPass.hpp  SymbolTable.hpp
core/private/: CMakeLists.txt  ContextHelper.cpp  ContextHelper.hpp  LCodeAST.cpp  LCodeAST.hpp  ListenerHelpers.hpp  LoadProgramFromLCode.cpp  LoadProgramFromLCode.hpp  MidiMessageFilterHelpers.hpp  MidiPortModelPrivate.cpp  MidiPortModelPrivate.hpp  RtMidiHelpers.cpp  RtMidiHelpers.hpp  VectorHelpers.hpp
core/private/langage/: CMakeLists.txt  LSystem.g4
core/private/language/: CMakeLists.txt  LCode.g4  LCode_with_tuple.g4  LSystem.g4  test_lcode_with_tuple.txt  test_lcode_without_tuple.txt
core/scripts/: MakeEnumDictionary.py  enum.txt
core/src/: ATurtle2D.cpp  ActionFactory.cpp  ActionTable.cpp  Format.cpp  Module.cpp  ModuleTable.cpp  Program.cpp  QAbstractDeviceScheme.cpp  QAbstractMidiIn.cpp  QAbstractMidiMessageFilter.cpp  QAbstractMidiOut.cpp  QAbstractMidiScheme.cpp  QAbstractMidiTranslator.cpp  QDefaultDeviceScheme.cpp  QDefaultMidiScheme.cpp  QDefaultMidiTranslator.cpp  QDeviceSchemeFactory.cpp  QMidiDeviceModel.cpp  QMidiIn.cpp  QMidiInBase.cpp  QMidiInListModel.cpp  QMidiManager.cpp  QMidiManufacturerModel.cpp  QMidiMessage.cpp  QMidiMessageBuilder.cpp  QMidiMessageFilterFactory.cpp  QMidiMessageFilterModel.cpp  QMidiMessageMatrix.cpp  QMidiMessageMatrixModel.cpp  QMidiMessageModel.cpp  QMidiNoteModel.cpp  QMidiOut.cpp  QMidiOutBase.cpp  QMidiPortModel.cpp  QMidiTranslatorFactory.cpp  QVirtualMidiIn.cpp  QVirtualMidiOut.cpp  Rewrite.cpp  RewriteRules.cpp  StringFormat.cpp  (+1 more)
core/src/LCode/: AbstractSyntaxTreeAlgorithms.cpp  AbstractSyntaxTreeBuilder.cpp  CompilationContext.cpp  (+11 more)
tests/: CMakeLists.txt  LanguageTest.cpp  ProgramTest.cpp  QMidiInListModelTest.cpp  QMidiManagerTest.cpp  QMidiManufacturerModelTest.cpp  QMidiMessageFilterModelTest.cpp  QMidiMessageFilterTest.cpp  QMidiMessageMatrixTest.cpp  QMidiMessageTest.cpp  QMidiPortModelTest.cpp  QVirtualMidiInTest.cpp  QVirtualMidiOutTest.cpp  RewriteTest.cpp  TestResources.qrc
tests/LCode/: AbstractSyntaxTreeAlgorithmTest.cpp  AbstractSyntaxTreeBuilderTest.cpp  AbstractSyntaxTreeTest.cpp  LCodeLexicalAnalysisTest.cpp  ParserUtility.hpp  SymbolDefinitionPassTest.cpp  SymbolTableTest.cpp
tests/Mocks/: Turtle2DMock.hpp
tests/Utility/: Printers.hpp  ProgramError.hpp
tests/lcode-examples/: 90_search.lcode  Tree01+90degrees.lcode  autoclose_test.lcode  fractal_triangle.lcode  losange_bud.lcode  repeated_u.lcode  stochastic_island_test.lcode  weird_technoid.lcode
tests/mocks/: AbstractMidiInMock.hpp  AbstractMidiMessageFilterMock.hpp  AbstractMidiOutMock.hpp  MidiMessageFilterMock.hpp
tests/stress-tests/: AbstractSyntaxTreeBuilderTest.cpp  CMakeLists.txt
tests/tests-common/: CMakeLists.txt
tests/unit-tests/: CMakeLists.txt  ExpressionTest.cpp  ProgramTest.cpp  RewriteTest.cpp  unit-tests-main.cpp
(+95 files in other folders)
